--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,3 +4,37 @@ Paleta de cores
 verde: #49a09d
 Lilás: #5f2c82
 */
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;/*Borda faz parte*/
+}
+body, html{
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);/*metade vai para direita e metade para a esquerda...ficando sempre no meio da tela */
+    background-color: white;
+    width: 250px;
+    height: 500px ;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px black;
+    overflow: hidden; /* o que estiver fora da borda */
+}
+section#login > div#imagem {
+    background: #5f2c82 url();
+    background-position: top left;
+    box-sizing: cover;
+    height: 200px;
+}
