--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -8,7 +8,13 @@ pequenas telas:até 600px
 
 grandes telas
 -TV:1201 min*/
-@media  screen and(min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 600px)and (max-width: 768px){
+    
+}
+@media  screen and (min-width: 768px)and (max-width: 992px) {
+    body {
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    }
   section#login {
     width: 80vw;
   }  
@@ -26,6 +32,9 @@ grandes telas
 
 }
 @media screen and (min-width: 992px){
+    body {
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    }
     section#login {
         width: 990px;
     }
