--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -9,6 +9,11 @@ pequenas telas:até 600px
 grandes telas
 -TV:1201 min*/
 @media screen and (min-width: 600px)and (max-width: 768px){
+    div#formulario {
+        text-align: justify;
+        width: 210;
+        height: 500;
+    }
     
 }
 @media  screen and (min-width: 768px)and (max-width: 992px) {
@@ -36,11 +41,22 @@ grandes telas
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
-        width: 990px;
+        width: 950px;
     }
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
+    }
+    section#login > div#formulario {
+        float: left;
+        width: 50%;
+    }
+    div#formulario > p{
+        font-size: 1.2em;
+       
+    }
+    div#formulario > h1 {
+        font-size: 2em;
     }
 }
