--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,5 +45,16 @@ section#login > div#imagem{
 section#login > div#formulario {
     display: block;
     padding: 10px;
-    text-align: justify;
+   
+}
+section#login > div#formulario {
+    float: left;
+    width: 50%;
+}
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#formulario > p {
+    font-size: 0.8em;
 }
