Término do projeto

--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -8,15 +8,16 @@ pequenas telas:até 600px
 
 grandes telas
 -TV:1201 min*/
-@media screen and (min-width: 600px)and (max-width: 768px){
+@media screen and (min-width: 600px){
     
 }
-@media  screen and (min-width: 768px)and (max-width: 992px) {
+@media  screen and (min-width: 600px)and (max-width: 992px) /* CONFIGURAÇÃO PARA TABLET */{
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
   section#login {
     width: 80vw;
+    height: 350px;
   }  
 
   section#login > div#imagem {
@@ -37,12 +38,13 @@ grandes telas
   }
 
 }
-@media screen and (min-width: 992px){
+@media screen and (min-width: 992px)/* CONFIGURAÇÃO PARA desctop */{
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
         width: 950px;
+        height: 400px;
     }
     section#login > div#imagem {
         float: right;
@@ -56,6 +58,7 @@ grandes telas
     div#formulario > p{
         font-size: 1.2em;
         text-align: justify;
+        margin: 20px 0px ;/* 20px corresponde ao top e bottom. O 0px correponde ao direita esquerda - left e rigth */
        
     }
     div#formulario > h1 {
